Styling, task list: Fix progress bar alignment, and change class of current progress div for updated bootstrap. Reduce size of first column, and progress bar column and increase size of count column.

--- a/Interface/resources/sass/sdk/elements/_task-list.scss
+++ b/Interface/resources/sass/sdk/elements/_task-list.scss
@@ -40,10 +40,14 @@
         button {
             margin-top: 8px;
         }
+
+        .progress {
+            margin-left: -15px; // override column padding
+        }
     }
     &__header, &__item {
         &:first-child {
-            width: 45%;
+            width: 40%;
         }
     }
 
